<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="250dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_gravity="start"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:text="@string/username_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="textNoSuggestions"
            android:id="@+id/edit_text_username"
            android:imeOptions="actionNext"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_gravity="start"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:text="@string/password_label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:id="@+id/edit_text_password"
            android:selectAllOnFocus="true"
            android:imeOptions="actionNext"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/sign_in"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:visibility="gone"
        android:background="@color/progressOverlayBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visiblity="visible">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/progressText"
            android:layout_below="@id/progressBar"
            android:layout_margin="8dp"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            tools:text="@string/signing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>